# http4py

./: .editorconfig  .gitignore  .justfile  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml  release.yml
core/: pyproject.toml
core/src/http4py/core/: __init__.py  body.py  http.py  http_version.py  message.py  method.py  status.py  uri.py
core/src/http4py/routing/: __init__.py  router.py
core/tests/: test_uri.py
core/tests/http4py/core/: test_uri.py
examples/: minimal_server.py  simple_client.py  simple_server.py
http4py-client/requests/: README.md  pyproject.toml
http4py-client/requests/src/http4py/client_requests/: __init__.py  requests_client.py
http4py-client/requests/tests/: conftest.py
http4py-client/requests/tests/http4py/client/: test_requests_client_contract.py
http4py-core/: README.md  pyproject.toml
http4py-core/src/http4py/client/: __init__.py  python_client.py  stdlib_client.py
http4py-core/src/http4py/core/: __init__.py  http.py  message.py  status.py  uri.py
http4py-core/src/http4py/core/filter/: __init__.py  debug.py
http4py-core/src/http4py/filter/: __init__.py  debug.py
http4py-core/src/http4py/routing/: __init__.py  route.py  router.py
http4py-core/src/http4py/server/: __init__.py  request_handler.py  server.py  server_config.py  stdlib_server.py
http4py-core/tests/: conftest.py
http4py-core/tests/http4py/client/: test_python_client.py  test_stdlib_client.py
http4py-core/tests/http4py/core/: test_filter.py  test_uri.py
http4py-core/tests/http4py/server/: test_stdlib_server_contract.py
http4py-server/asgi/: README.md  pyproject.toml
http4py-server/asgi/src/http4py/server_asgi/: __init__.py  asgi_adapter.py
http4py-server/asgi/tests/http4py/server/: test_asgi_adapter.py
http4py-server/uvicorn/: README.md  pyproject.toml
http4py-server/uvicorn/src/http4py/server_uvicorn/: __init__.py  uvicorn_server.py
http4py-server/uvicorn/tests/http4py/server/: test_uvicorn.py
http4py-testing/support/: README.md  pyproject.toml
http4py-testing/support/src/http4py/testing/: __init__.py  conftest.py  contract_http_client.py  contract_http_server.py
scripts/: build.sh  check_all.py  http4py.sh  release.sh  test.sh  test_all.py  test_module.py  typecheck.sh  typecheck_all.py  typecheck_module.py
server/random/: pyproject.toml
server/random/src/http4py/server/: MyServer.py  __init__.py  my_server.py
server/random/tests/http4py/server/: test_stub.py
website/: config.yaml
website/assets/css/: critical.css  custom-styles.css  fonts.css  tailwind.css
website/content/: _index.md
website/data/src/: client.py  filters.py  handler.py  routing.py  server.py  testing.py
website/layouts/: 404.html  index.html
website/layouts/_default/: baseof.html
website/layouts/partials/: code-example.html  footer.html  header.html
website/public/: index.xml  sitemap.xml
website/public/categories/: index.xml
website/public/tags/: index.xml
