[project]
name = "http4py-core"
version = "0.0.1"
description = "Core http4py functionality"
requires-python = ">=3.13"
license = "Apache-2.0"
homepage = "https://http4py.org"
repository = "https://github.com/http4py/http4py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/http4py"]
