[project]
name = "http4py-client-requests"
version = "0.0.1"
description = "http4py Requests Client"
requires-python = ">=3.13"
license = "Apache-2.0"
homepage = "https://http4py.org"
repository = "https://github.com/http4py/http4py"

dependencies = [
    "http4py-core",
    "requests",
]

[project.optional-dependencies]
dev = [
    "http4py-testing-support",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/http4py"]